Fix Javadoc links on Safari

--- a/_sass/fabric.scss
+++ b/_sass/fabric.scss
@@ -165,7 +165,7 @@ p {
     }
 
 		.javadoc-selector {
-			margin-bottom: 8px;
+			margin-bottom: 6px;
 
 			select {
 				max-width: 100%; width: 100%;
@@ -178,6 +178,17 @@ p {
 				box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 				font-size: 16px;
 				background-color: transparent;
+
+				// Remove default styling, especially on Safari
+				-webkit-appearance: none;
+				-moz-appearance: none;
+				appearance: none;
+
+				// Add back the arrow, see https://stackoverflow.com/a/57510283
+				background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%23FFFFFF'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat;
+				background-size: 10px;
+				background-position: calc(100% - 16px) center;
+				background-repeat: no-repeat;
 
 				option {
 					background-color: $grey-color-very-dark;
